force-app/main/default/objects/Student__c/fields/Chemistry__c.field-meta.xml
<CustomField>
    <fullName>Chemistry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chemistry</label>
    <type>Checkbox</type>
</CustomField>