force-app/main/default/objects/Student__c/fields/Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>Computer_Science__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer Science</label>
    <type>Checkbox</type>
</CustomField>