force-app/main/default/objects/Student__c/fields/Educational_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Educational_Qualification__c</fullName>
    <inlineHelpText>Select only if students got the passing Certificate.</inlineHelpText>
    <label>Educational Qualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>