force-app/main/default/objects/Student__c/fields/IMP__c.field-meta.xml
<CustomField>
    <fullName>IMP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>International Mathematics Olympiad</inlineHelpText>
    <label>IMP</label>
    <type>Checkbox</type>
</CustomField>