force-app/main/default/objects/Student__c/fields/KVPY__c.field-meta.xml
<CustomField>
    <fullName>KVPY__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Kishore Vaigyanik Protsahan Yojana Exam</inlineHelpText>
    <label>KVPY</label>
    <type>Checkbox</type>
</CustomField>