force-app/main/default/objects/Student__c/fields/NSO__c.field-meta.xml
<CustomField>
    <fullName>NSO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>National Science Olympiad</inlineHelpText>
    <label>NSO</label>
    <type>Checkbox</type>
</CustomField>