force-app/main/default/objects/Student__c/fields/NTSE__c.field-meta.xml
<CustomField>
    <fullName>NTSE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>National Talent Search Examination</inlineHelpText>
    <label>NTSE</label>
    <type>Checkbox</type>
</CustomField>