force-app/main/default/objects/Student__c/fields/Parent_s_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_Mobile_Number__c</fullName>
    <label>Parent&apos;s Mobile Number</label>
    <type>Phone</type>
</CustomField>