force-app/main/default/objects/Student__c/fields/Physics__c.field-meta.xml
<CustomField>
    <fullName>Physics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physics</label>
    <type>Checkbox</type>
</CustomField>