force-app/main/default/objects/Student__c/fields/UCO__c.field-meta.xml
<CustomField>
    <fullName>UCO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Unified Cyber Olympiad</inlineHelpText>
    <label>UCO</label>
    <type>Checkbox</type>
</CustomField>